--- a/DataMajor/First_Swipe/0002.Scala.Q.md
+++ b/DataMajor/First_Swipe/0002.Scala.Q.md
@@ -292,3 +292,207 @@ The strongest answers to this question use a structured framework. Here's how to
 
 **"Design a real-time fraud detection pipeline for Capital One that processes 10,000 transactions per second, flags suspicious activity within 5 seconds, and guarantees no transaction is ever lost. Walk me through your architecture, technology choices, and how Scala ties it all together."**
 ---
+
+# Feedback
+
+---
+
+## What You Nailed ✅
+
+**Layered architecture thinking** — leading with layers immediately signals senior engineering maturity. This is exactly how Staff and Lead engineers present system design.
+
+**Decoupling with Kafka** — correctly identified that Kafka's role is decoupling, durability and elasticity — not just messaging. That distinction shows architectural depth.
+
+**Latency budget per layer** — this is exceptional. Most candidates give a vague "it'll be fast" answer. You assigned specific latency targets to each layer and showed they sum to under 5 seconds. This is how real system design documents are written at companies like Capital One.
+
+**Exactly-once semantics** — mentioning Kafka + Flink exactly-once processing to guarantee zero loss is a senior-level detail. Most candidates say "we'll retry" without knowing the mechanism.
+
+**Chaos Engineering** — bringing up fault tolerance testing through chaos engineering is a Staff Engineer level concept. Very impressive for this context.
+
+**Dual storage strategy** — Cassandra/DynamoDB for hot writes plus S3/Snowflake for cold long-term storage shows you understand the cost and performance tradeoffs of storage tiers.
+
+**Key principles summary** — closing with event-driven, microservices, fault tolerant, real-time framing shows you can communicate architecture to both technical and non-technical stakeholders.
+
+---
+
+## What to Tighten Up 🔧
+
+**Scala was not connected to the architecture.** This is a Scala interview — the interviewer specifically asked how Scala ties it all together. You need to explicitly say:
+
+*"Scala is the thread running through the entire processing layer. Kafka Streams has a native Scala API. Flink's most mature API is Scala. And if we use Spark Structured Streaming as an alternative to Flink, that's pure Scala. The type safety of Scala means our fraud rules are validated at compile time before they ever touch production data."*
+
+**Apache Flink choice needs more justification.** You chose Flink over Spark Structured Streaming — good choice — but explain why:
+
+*"I chose Flink over Spark Structured Streaming specifically because Flink is true record-by-record stream processing with sub-second latency. Spark Structured Streaming is micro-batch — even at its fastest it introduces small batch delays. At 10,000 TPS with a 5-second SLA, true streaming matters."*
+
+**Missing — the Scala Flink code** that connects it all:
+
+```scala
+import org.apache.flink.streaming.api.scala._
+import org.apache.flink.streaming.api.windowing.time.Time
+
+case class Transaction(
+  id:         String,
+  customerId: String,
+  amount:     Double,
+  merchant:   String,
+  location:   String,
+  timestamp:  Long
+)
+
+case class FraudAlert(
+  transactionId: String,
+  customerId:    String,
+  reason:        String,
+  riskScore:     Double
+)
+
+object FraudDetectionPipeline {
+
+  def main(args: Array[String]): Unit = {
+
+    val env = StreamExecutionEnvironment.getExecutionEnvironment
+    env.setParallelism(16)  // scale to 16 parallel tasks
+
+    // Enable exactly-once checkpointing
+    env.enableCheckpointing(5000)  // checkpoint every 5 seconds
+
+    // 1. Ingest from Kafka
+    val transactions: DataStream[Transaction] = env
+      .addSource(new FlinkKafkaConsumer[Transaction](
+        "transactions",
+        new TransactionDeserializer(),
+        kafkaProperties
+      ))
+
+    // 2. Enrich with customer history
+    val enriched = transactions
+      .keyBy(_.customerId)
+      .flatMap(new CustomerEnrichmentFunction())
+
+    // 3. Apply fraud rules
+    val fraudAlerts: DataStream[FraudAlert] = enriched
+      .keyBy(_.customerId)
+      .timeWindow(Time.seconds(60))  // 60-second sliding window
+      .process(new FraudDetectionFunction())
+
+    // 4. Route results
+    fraudAlerts
+      .addSink(new FlinkKafkaProducer[FraudAlert](
+        "fraud-alerts",
+        new AlertSerializer(),
+        kafkaProperties
+      ))
+
+    env.execute("Capital One Fraud Detection Pipeline")
+  }
+}
+
+// Fraud detection business logic in Scala pattern matching
+class FraudDetectionFunction
+  extends ProcessWindowFunction[Transaction, FraudAlert, String, TimeWindow] {
+
+  override def process(
+    customerId: String,
+    context:    Context,
+    elements:   Iterable[Transaction],
+    out:        Collector[FraudAlert]
+  ): Unit = {
+
+    val txList = elements.toList
+
+    // Rule 1 — velocity check
+    if (txList.length > 10) {
+      out.collect(FraudAlert(
+        txList.head.id, customerId,
+        "HIGH VELOCITY — more than 10 transactions in 60 seconds",
+        0.85
+      ))
+    }
+
+    // Rule 2 — large amount in new location
+    txList.foreach { tx =>
+      (tx.amount, tx.location) match {
+        case (amount, location) if amount > 5000 && isNewLocation(customerId, location) =>
+          out.collect(FraudAlert(
+            tx.id, customerId,
+            s"Large transaction in new location: $location",
+            0.90
+          ))
+        case _ => // normal — no alert
+      }
+    }
+
+    // Rule 3 — amount anomaly using ML score
+    val avgAmount = txList.map(_.amount).sum / txList.length
+    txList.foreach { tx =>
+      if (tx.amount > avgAmount * 5) {
+        out.collect(FraudAlert(
+          tx.id, customerId,
+          s"Amount ${tx.amount} is 5x above customer average $avgAmount",
+          0.75
+        ))
+      }
+    }
+  }
+
+  def isNewLocation(customerId: String, location: String): Boolean = {
+    // In production — lookup customer location history from Redis
+    true
+  }
+}
+```
+
+**Missing — Redis for stateful enrichment.** At 10,000 TPS you need sub-millisecond customer history lookups. Redis is the standard answer:
+
+*"Between Kafka and Flink I'd use Redis as a customer profile store — storing recent transaction history, typical spending patterns, and known locations. Flink enriches each transaction by doing a Redis lookup in under 1ms before applying fraud rules."*
+
+**Missing — the exactly-once mechanism explained.** You mentioned it but didn't explain how:
+
+*"Kafka guarantees exactly-once using idempotent producers with sequence numbers and transactional APIs. Flink guarantees exactly-once using distributed snapshots — Chandy-Lamport algorithm — that checkpoint state to S3 every few seconds. If a node fails, Flink replays from the last checkpoint without duplicating records."*
+
+---
+
+## Model Architecture Diagram
+
+```
+                    ┌─────────────────────────────────────────┐
+                    │           INGESTION LAYER                │
+                    │   REST API → Lambda/ECS → Validation     │
+                    │         Latency Target: <100ms           │
+                    └──────────────────┬──────────────────────┘
+                                       │
+                    ┌──────────────────▼──────────────────────┐
+                    │         KAFKA MESSAGING LAYER            │
+                    │   3 brokers, replication factor 3        │
+                    │   Exactly-once producer semantics        │
+                    │         Latency Target: <500ms           │
+                    └──────────────────┬──────────────────────┘
+                                       │
+                    ┌──────────────────▼──────────────────────┐
+                    │      FLINK STREAM PROCESSING (Scala)     │
+                    │   Enrich from Redis → Apply Rules → ML   │
+                    │   Checkpointing every 5s to S3           │
+                    │         Latency Target: <2 seconds       │
+                    └──────────┬───────────────┬──────────────┘
+                               │               │
+               ┌───────────────▼──┐      ┌─────▼──────────────┐
+               │   FRAUD ALERTS   │      │   CLEAN RECORDS     │
+               │   Kafka topic    │      │   Kafka topic       │
+               └───────────────┬──┘      └─────┬──────────────┘
+                               │               │
+               ┌───────────────▼──┐      ┌─────▼──────────────┐
+               │  ALERT SERVICE   │      │  CASSANDRA + S3     │
+               │  Block/Notify    │      │  Hot + Cold Store   │
+               └──────────────────┘      └────────────────────┘
+```
+
+
+
+## Overall Assessment
+
+You are interview-ready for the Scala portion of the Capital One Lead Data Engineer role. Your strongest areas are system design thinking, AWS-specific knowledge, and production pipeline instincts. The areas to sharpen before the interview are connecting Scala language features explicitly to your architecture answers, and always pairing every diagnosis with a concrete fix.
+
+---
+
+Ready to move to the next topic on our list — **Kafka and Real-Time Streaming**? 🎯
