--- a/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
+++ b/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
@@ -148,12 +148,57 @@ Same rules as before — answer like you're in the room. I give feedback after e
 
 ---
 
+# Feedback
 
+---
 
+## What You Nailed ✅
 
+**The mailbox/highway analogy** — immediately made it accessible. Strong opening that works for both technical and non-technical interviewers.
 
+**Topics as labeled folders** — clean, simple, accurate.
+
+**"Any program can read as many times as it wants"** — this is the key differentiator from RabbitMQ and you nailed it without even being asked yet.
+
+**Database vs Kafka distinction** — "Database = current state. Kafka = history of changes" is one of the cleanest one-liners you can give in an interview. Memorable and precise.
+
+**RabbitMQ comparison** — push vs pull model correctly identified. Messages disappear after processing vs Kafka retaining them — exactly right. The "smart delivery vs high-speed broadcast log" framing is excellent.
+
+**Immutability of Kafka log** — mentioning that you only add new events, never edit old ones, shows you understand Kafka's fundamental design as an append-only log.
+
+---
+
+## What to Tighten Up 🔧
+
+**Missing the "why it was built" context.** LinkedIn built Kafka in 2011 because they had exactly the spaghetti problem — too many point-to-point connections between systems. Adding one sentence about this gives your answer a narrative arc:
+
+*"LinkedIn built Kafka in 2011 because they had hundreds of systems all trying to talk to each other directly — it became unmaintainable. Kafka solved it by putting a central log in the middle."*
+
+**Missing partitions and scale mechanism.** You said "extremely fast with millions of messages per second" but didn't explain the mechanism — partitions. One sentence would complete it:
+
+*"The reason Kafka achieves that speed is partitioning — each topic is split into multiple partitions that can be processed in parallel across multiple brokers and consumers simultaneously."*
+
+**Missing the offset concept.** You touched on retention but didn't mention offsets — which is the mechanism that makes "read as many times as you want" actually work:
+
+*"Kafka tracks where each consumer is in the stream using offsets — sequential bookmarks. If a consumer crashes and restarts, it picks up exactly where it left off. That's the foundation of the zero data loss guarantee."*
+
+---
+
+## Model Answer — The Complete Version
+
+*"Kafka is an event streaming platform originally built by LinkedIn to solve a specific problem — when you have hundreds of systems all trying to talk to each other directly, you end up with an unmanageable web of connections. Kafka solves this by acting as a central nervous system — a distributed, append-only log that sits in the middle of your architecture.*
+
+*Producers write events to topics — labeled categories like transactions or fraud-alerts. Consumers read from those topics independently, at their own pace, tracked by offsets so they never lose their place. Multiple consumers can read the same topic simultaneously without interfering with each other.*
+
+*Compared to a traditional database — a database stores current state, you update records in place, and it's optimized for random lookups. Kafka stores history — an immutable sequence of what happened — and it's optimized for high-throughput sequential reads and writes.*
+
+*Compared to RabbitMQ — RabbitMQ is a smart delivery system. It routes messages to the right consumer and deletes them once processed. It's great for task queues and workflows at moderate scale. Kafka is a high-speed broadcast log. It retains events for days or weeks, handles millions of events per second through partitioning, and lets any number of independent consumers replay the same history. At Capital One scale — billions of transactions — RabbitMQ would buckle. Kafka was built for exactly that load."*
 
 
 ---
 ---
 ---
+
+## Question 2 — Stepping Up
+
+**"Explain Kafka's architecture. What are brokers, topics, partitions, consumer groups, and offsets — and how do they all work together to guarantee reliability at scale?"**
