--- a/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
+++ b/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
@@ -202,3 +202,119 @@ Same rules as before — answer like you're in the room. I give feedback after e
 ## Question 2 — Stepping Up
 
 **"Explain Kafka's architecture. What are brokers, topics, partitions, consumer groups, and offsets — and how do they all work together to guarantee reliability at scale?"**
+
+# Feedback First
+
+---
+
+## What You Nailed ✅
+
+**Every concept was correctly defined** — brokers, topics, partitions, consumer groups, and offsets all accurate and clearly explained.
+
+**"Exactly one consumer per partition within a group"** — this is the detail most candidates miss. You got it right and explained why it matters for parallelism.
+
+**Append-only log** — correctly described partitions as append-only. Shows you understand Kafka's fundamental design.
+
+**Offset commit mechanism** — correctly explained that offsets are committed back to Kafka itself, not to an external system. That's an important detail.
+
+**Replication for fault tolerance** — correctly connected brokers to replication across the cluster.
+
+**The closing summary** — you naturally connected all five concepts into a coherent flow without being asked. That's exactly how a Lead Engineer presents in an interview.
+
+---
+
+
+
+# Kafka Architecture Diagram
+
+```
+                         KAFKA CLUSTER
+╔══════════════════════════════════════════════════════════════════╗
+║                                                                  ║
+║   ┌─────────────┐    ┌─────────────┐    ┌─────────────┐         ║
+║   │  BROKER 1   │    │  BROKER 2   │    │  BROKER 3   │         ║
+║   │  (Leader)   │    │  (Follower) │    │  (Follower) │         ║
+║   │             │    │             │    │             │         ║
+║   │ Partition 0 │◄──►│ Partition 0 │◄──►│ Partition 0 │         ║
+║   │  (Primary)  │    │  (Replica)  │    │  (Replica)  │         ║
+║   │             │    │             │    │             │         ║
+║   │ Partition 1 │◄──►│ Partition 1 │◄──►│ Partition 1 │         ║
+║   │  (Replica)  │    │  (Primary)  │    │  (Replica)  │         ║
+║   │             │    │             │    │             │         ║
+║   │ Partition 2 │◄──►│ Partition 2 │◄──►│ Partition 2 │         ║
+║   │  (Replica)  │    │  (Replica)  │    │  (Primary)  │         ║
+║   └─────────────┘    └─────────────┘    └─────────────┘         ║
+║                                                                  ║
+╚══════════════════════════════════════════════════════════════════╝
+         ▲                    ▲                    ▲
+         │                    │                    │
+         └────────────────────┴────────────────────┘
+                              │
+                    TOPIC: "transactions"
+                    (3 Partitions, Replication Factor 3)
+
+
+PRODUCERS                                          CONSUMERS
+(Write Events)                                     (Read Events)
+
+┌─────────────┐                               ┌──────────────────────────┐
+│  Mobile App │──┐                            │    CONSUMER GROUP A      │
+└─────────────┘  │                            │    (Fraud Detection)     │
+                 │   ┌─────────────────┐      │                          │
+┌─────────────┐  │   │                 │      │ Consumer 1 ← Partition 0 │
+│  ATM Network│──┼──►│     KAFKA       │─────►│ Consumer 2 ← Partition 1 │
+└─────────────┘  │   │                 │      │ Consumer 3 ← Partition 2 │
+                 │   │  TOPIC:         │      └──────────────────────────┘
+┌─────────────┐  │   │  transactions   │
+│  Web Portal │──┘   │                 │      ┌──────────────────────────┐
+└─────────────┘      │  Partition 0 ──►│      │    CONSUMER GROUP B      │
+                     │  [0][1][2][3]   │      │    (Analytics Pipeline)  │
+                     │                 │      │                          │
+                     │  Partition 1 ──►│─────►│ Consumer 1 ← Partition 0 │
+                     │  [0][1][2][3]   │      │ Consumer 2 ← Partition 1 │
+                     │                 │      │ Consumer 3 ← Partition 2 │
+                     │  Partition 2 ──►│      └──────────────────────────┘
+                     │  [0][1][2][3]   │
+                     │                 │      ┌──────────────────────────┐
+                     └─────────────────┘      │    CONSUMER GROUP C      │
+                                              │    (Notification Service)│
+                                              │                          │
+                                              │ Consumer 1 ← Partition 0 │
+                                              │ Consumer 2 ← Partition 1 │
+                                              │ Consumer 3 ← Partition 2 │
+                                              └──────────────────────────┘
+
+
+OFFSET TRACKING (Inside Partition 0)
+╔══════════════════════════════════════════════════════╗
+║                                                      ║
+║  Offset:  [0]   [1]   [2]   [3]   [4]   [5]  ...   ║
+║           T001  T002  T003  T004  T005  T006         ║
+║                                                      ║
+║  Group A committed up to offset 4 ✅                 ║
+║  Group B committed up to offset 2 ✅                 ║
+║  Group C committed up to offset 5 ✅                 ║
+║                                                      ║
+║  Each group tracks independently —                   ║
+║  reading the same data at different speeds           ║
+║                                                      ║
+╚══════════════════════════════════════════════════════╝
+
+
+KEY RULES
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+ 1 topic      → many partitions   (parallelism)
+ 1 partition  → 1 leader broker   (consistency)
+ 1 partition  → many replicas     (fault tolerance)
+ 1 partition  → 1 consumer        (within a group)
+ 1 topic      → many groups       (independent reads)
+ 1 offset     → 1 message         (exact tracking)
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+```
+---
+---
+
+## Question 3 — Getting Serious
+
+**"Capital One processes millions of transactions daily. How would you design a Kafka topic structure for a real-time transaction processing system? How many topics, how many partitions, and what would your replication strategy look like — and why?"**
+
