--- a/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
+++ b/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
@@ -345,3 +345,195 @@ KEY RULES
 
 **"Capital One processes millions of transactions daily. How would you design a Kafka topic structure for a real-time transaction processing system? How many topics, how many partitions, and what would your replication strategy look like — and why?"**
 
+---
+# Feedback First
+
+---
+
+## What You Nailed ✅
+
+**Starting simple with one main topic** — correct instinct. Over-engineering topic structure is a common mistake. One topic first, split later when you have a reason.
+
+**Account/Customer ID as partition key** — this is the most important design decision in the entire answer and you got it exactly right. Ordering guarantees per customer is the foundation of fraud detection logic.
+
+**100-500 partitions** — correct range for Capital One scale. Shows you understand the relationship between partitions, parallelism, and throughput.
+
+**Replication factor of 3** — industry standard, correctly justified. The "two copies survive one broker failure" logic is exactly right.
+
+**"Too few = traffic jam, too many = extra work"** — clean framing of the partition tradeoff that interviewers love.
+
+**Testing and tweaking** — acknowledging that you'd validate and adjust shows production maturity.
+
+---
+
+## What to Tighten Up 🔧
+
+**Missing the retention policy** — for a bank, how long you keep transactions in Kafka is a compliance and architecture decision. Should have mentioned:
+
+*"For a financial institution I'd set retention to at least 7 days on the hot Kafka layer — long enough for consumers to catch up after an outage — and then archive to S3 indefinitely for compliance and regulatory requirements."*
+
+**Missing min.insync.replicas** — you mentioned replication factor 3 but the complete answer includes this critical safety setting:
+
+*"Along with replication factor 3, I'd set min.insync.replicas to 2 — meaning Kafka won't acknowledge a write as successful unless at least 2 replicas have confirmed it. This prevents data loss even if a broker dies mid-write."*
+
+**Missing the topic evolution strategy** — how do you add topics as the system grows? One sentence would complete it:
+
+*"I'd start with transactions as the single source of truth, then add downstream topics as needed — fraud-alerts, approved-transactions, declined-transactions — populated by stream processors consuming from the main topic. This keeps producers simple and lets consumers evolve independently."*
+
+**Missing throughput calculation** — showing the math signals senior engineering:
+
+*"At 10,000 TPS with an average message size of 1KB, that's 10MB per second of raw throughput. With replication factor 3 that's 30MB per second across the cluster. 100 partitions gives each partition 100KB per second — well within Kafka's per-partition limits."*
+
+---
+
+# Model Answer
+
+---
+
+*"I'd design the topic structure in layers — starting simple and evolving as the system grows rather than over-engineering upfront.*
+
+**Topic Structure:**
+
+*I'd start with one primary topic — transactions — as the single source of truth for all incoming events regardless of channel. Mobile, ATM, web, wire transfers all produce to the same topic. This keeps the producer side simple and gives every downstream consumer one place to read from.*
+
+*From there I'd add derived topics populated by stream processors — fraud-alerts for flagged transactions, approved-transactions and declined-transactions for downstream systems that only care about final outcomes, and audit-log for compliance. Producers never write to derived topics directly — only stream processors do. This keeps the architecture clean and gives you a clear lineage of how data flows.*
+
+**Partition Count:**
+
+*For the transactions topic at Capital One scale I'd start with 200 partitions and benchmark from there. The math — at 10,000 transactions per second with an average message size of 1KB, that's 10MB per second of raw throughput. With replication factor 3 that's 30MB per second across the cluster. 200 partitions gives each partition 50KB per second — well within Kafka's per-partition throughput limits and leaves headroom for traffic spikes.*
+
+*The critical design decision is the partition key — I'd use customer ID or account number. This guarantees all transactions for a given customer land in the same partition in strict chronological order. That ordering guarantee is the foundation of fraud detection — you cannot detect that a customer made 10 transactions in 5 minutes if those transactions are scattered randomly across partitions.*
+
+**Replication Strategy:**
+
+*Replication factor of 3 across brokers in different availability zones — never two replicas in the same AZ. This means the system survives both individual broker failures and full AZ outages without losing a single message.*
+
+*Along with replication factor 3, I'd configure min.insync.replicas to 2 — meaning Kafka will not acknowledge a write as successful unless at least 2 replicas have confirmed receipt. Combined with acks=all on the producer side, this gives you a hard guarantee that no transaction is ever silently lost even if a broker dies mid-write.*
+
+**Retention Policy:**
+
+*For a financial institution I'd set retention to 7 days on the Kafka layer — long enough for any consumer to catch up after an extended outage. All messages are simultaneously archived to S3 via Kafka Connect in real time for long-term storage, compliance, and regulatory requirements. That way Kafka stays lean and fast while nothing is ever permanently lost.*
+
+**The Partition Math Visualized:**
+
+```
+10,000 TPS  ×  1KB avg message  =  10 MB/sec raw throughput
+                                 ×  3 replication factor
+                                 =  30 MB/sec cluster throughput
+
+200 partitions  →  50 KB/sec per partition  ✅ (well within limits)
+100 partitions  →  100 KB/sec per partition ✅ (still fine)
+50  partitions  →  200 KB/sec per partition ⚠️ (getting tight at peak)
+```*
+
+---
+
+# Architecture Diagram
+
+```
+PRODUCERS                    KAFKA TOPICS                    CONSUMERS
+(All Channels)               (Topic Structure)               (All Systems)
+
+┌─────────────┐              ┌──────────────────────────┐
+│  Mobile App │──────────┐   │                          │
+└─────────────┘          │   │   TOPIC: transactions    │──────────────────┐
+                         │   │   (Source of Truth)      │                  │
+┌─────────────┐          │   │                          │                  │
+│ ATM Network │──────────┼──►│   Partitions: 200        │                  │
+└─────────────┘          │   │   Replication: 3         │                  │
+                         │   │   Retention: 7 days      │                  │
+┌─────────────┐          │   │   Key: customer_id       │                  │
+│  Web Portal │──────────┘   │                          │                  │
+└─────────────┘              │  P0  [T001][T045][T089]  │                  │
+                             │  P1  [T002][T046][T090]  │                  │
+┌─────────────┐              │  P2  [T003][T047][T091]  │                  │
+│ Wire Service│──────────────►  ...                     │                  │
+└─────────────┘              │  P199[T004][T048][T092]  │                  │
+                             │                          │                  │
+                             └──────────────────────────┘                  │
+                                          │                                │
+                    ┌─────────────────────┼──────────────────┐             │
+                    ▼                     ▼                  ▼             │
+         ┌──────────────────┐  ┌──────────────────┐  ┌──────────────┐     │
+         │ STREAM PROCESSOR │  │ STREAM PROCESSOR │  │   ARCHIVER   │     │
+         │  (Flink/Spark)   │  │  (Flink/Spark)   │  │   (Kafka     │     │
+         │  Fraud Detection │  │  Transaction     │  │   Connect)   │     │
+         └────────┬─────────┘  │  Decisioning     │  └──────┬───────┘     │
+                  │            └────────┬─────────┘         │             │
+                  ▼                     ▼                    ▼             │
+         ┌──────────────┐    ┌──────────────────┐    ┌──────────────┐     │
+         │    TOPIC:    │    │     TOPIC:       │    │   S3/Data    │     │
+         │ fraud-alerts │    │approved-txns     │    │    Lake      │     │
+         │              │    │declined-txns     │    │  (Forever)   │     │
+         └──────┬───────┘    └────────┬─────────┘    └──────────────┘     │
+                │                     │                                    │
+                ▼                     ▼                                    │
+         ┌──────────────┐    ┌──────────────────┐                         │
+         │  Alerting &  │    │  Downstream      │◄────────────────────────┘
+         │  Blocking    │    │  Systems         │    Analytics Pipeline
+         │  Service     │    │  (Reporting,     │    reads raw transactions
+         └──────────────┘    │   ML Training)   │    directly
+                             └──────────────────┘
+
+
+REPLICATION ACROSS AVAILABILITY ZONES
+╔═══════════════════════════════════════════════════════════════╗
+║                                                               ║
+║   AZ-1 (us-east-1a)    AZ-2 (us-east-1b)   AZ-3 (us-east-1c)║
+║   ┌─────────────┐      ┌─────────────┐      ┌─────────────┐  ║
+║   │  BROKER 1   │      │  BROKER 2   │      │  BROKER 3   │  ║
+║   │             │      │             │      │             │  ║
+║   │ P0 LEADER ◄─┼──────┼─ P0 FOLLOW  │      │ P0 FOLLOW   │  ║
+║   │ P1 FOLLOW   │      │ P1 LEADER ◄─┼──────┼─ P1 FOLLOW  │  ║
+║   │ P2 FOLLOW   │      │ P2 FOLLOW   │      │ P2 LEADER   │  ║
+║   └─────────────┘      └─────────────┘      └─────────────┘  ║
+║                                                               ║
+║   If entire AZ-1 goes down →                                  ║
+║   Broker 2 or 3 becomes new Leader for P0 automatically ✅    ║
+║   Zero data loss. Zero manual intervention.                   ║
+║                                                               ║
+╚═══════════════════════════════════════════════════════════════╝
+
+
+PARTITION KEY STRATEGY
+╔═══════════════════════════════════════════════════════════════╗
+║                                                               ║
+║  Key = customer_id                                            ║
+║                                                               ║
+║  Customer C001 → always → Partition 0                         ║
+║  [T001: $500][T045: $1200][T089: $50,000] ← in order ✅       ║
+║                                                               ║
+║  Customer C002 → always → Partition 1                         ║
+║  [T002: $200][T046: $800][T090: $300] ← in order ✅           ║
+║                                                               ║
+║  Why this matters for fraud detection:                        ║
+║  "C001 made 10 transactions in 5 minutes" ← only possible     ║
+║   if all C001 transactions are in the same partition          ║
+║   in strict chronological order                               ║
+║                                                               ║
+╚═══════════════════════════════════════════════════════════════╝
+
+
+CONFIGURATION SUMMARY
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+  replication.factor     = 3      (survive 2 broker failures)
+  min.insync.replicas    = 2      (write confirmed by 2 replicas)
+  acks                   = all    (producer waits for all ISR)
+  retention.ms           = 7days  (hot layer)
+  partitions             = 200    (parallelism at scale)
+  partition.key          = customer_id (ordering guarantee)
+  archive                = S3     (cold layer, forever)
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+```
+
+
+---
+---
+---
+
+## Question 4 — Lead Engineer Level
+
+**"Explain Kafka's delivery guarantees — at-most-once, at-least-once, and exactly-once. How does Kafka achieve exactly-once semantics and why does it matter specifically for Capital One's transaction processing?"**
+
+---
+
