--- a/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
+++ b/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
@@ -526,6 +526,7 @@ CONFIGURATION SUMMARY
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 ```
 
+![2026-02-12_21-59-34](2026-02-12_21-59-34.png)
 
 ---
 ---
@@ -534,6 +535,7 @@ CONFIGURATION SUMMARY
 ## Question 4 — Lead Engineer Level
 
 **"Explain Kafka's delivery guarantees — at-most-once, at-least-once, and exactly-once. How does Kafka achieve exactly-once semantics and why does it matter specifically for Capital One's transaction processing?"**
+
 
 ---
 
