--- a/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
+++ b/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
@@ -424,13 +424,12 @@ KEY RULES
 200 partitions  →  50 KB/sec per partition  ✅ (well within limits)
 100 partitions  →  100 KB/sec per partition ✅ (still fine)
 50  partitions  →  200 KB/sec per partition ⚠️ (getting tight at peak)
-```*
+```
 
 ---
 
 
-
-![2026-02-12_21-59-34](2026-02-12_21-59-34.png)
+![Kafka Delivery Guarantees](kafka_delivery.png)
 
 ---
 ---
